--- a/index.html
+++ b/index.html
@@ -11,6 +11,56 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 shadow fixed-top">
+            <div class="container">
+              <a class="navbar-brand" href="#">Mob<span class="text-blue fw-bold">Zen</span></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item mx-3">
+                    <a class="nav-link active" aria-current="page" href="#features">Features</a>
+                  </li>
+                  <li class="nav-item mx-3">
+                    <a class="nav-link" href="#download">Download</a>
+                  </li>
+                  <li class="nav-item mx-3">
+                    <a class="nav-link btn btn-style rounded-pill bg-grt text-white px-3" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" width="30" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"/>
+                          </svg>
+                          Send Feedback
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+<!-- Top Section  -->
+        <section class="mb-5 py-3">
+            <div class="container">
+                <div class="row py-3">
+                    <div class="col-md-6 d-flex align-items-center text-center text-sm-start">
+                        <div>
+                            <h1 class="display-2 fw-bold text-blue">Showcase your app beautifully.</h1>
+                            <p class="fs-5">Launch your mobile app landing page faster with this free, open source theme from Start Bootstrap!</p>
+                            <div>
+                                <img src="./img/google-play.png" alt="" srcset="">
+                                <img src="./img/app-store.png" alt="" srcset="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex justify-content-center align-items-center">
+                        <img src="./img/banner.png" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </section>
 
+    </main>
 </body>
 </html>
