--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                 </div>
             </div>
         </section>
+<!-- Banner Section  -->
+        <section class="bg-grt d-flex flex-column justify-content-center align-items-center py-5">
+            <h1 class="text-center text-white w-50 mb-3">"An intuitive solution to a common problem that we all face, wrapped up in a single app!"</h1>
+            <img src="./img/tnw-logo.svg" alt="" height="50" srcset="">
+        </section>
 
     </main>
 </body>
