--- a/index.html
+++ b/index.html
@@ -65,7 +65,66 @@
             <h1 class="text-center text-white w-50 mb-3">"An intuitive solution to a common problem that we all face, wrapped up in a single app!"</h1>
             <img src="./img/tnw-logo.svg" alt="" height="50" srcset="">
         </section>
+<!-- Features Section  -->
+        <section class="container" id="features">
+            <div class="row">
+                <div class="col-md-5 d-flex justify-content-center align-items-center py-4">
+                    <img src="./img/phone.png" alt="">
+                </div>
+                <div class="col-md-7 p-3 ">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="border border-secondry d-flex flex-column justify-content-center align-items-center py-3 my-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 bg-grt rounded-circle text-white p-2" width="80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
+                                  </svg>
+                                  <h3 class="my-3">Device Mockups</h3>
+                                  <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                            </div>
+                            <div class="border border-secondry d-flex flex-column justify-content-center align-items-center py-3 my-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 bg-grt rounded-circle text-white p-2" width="80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
+                                  </svg>
+                                  <h3 class="my-3">Device Mockups</h3>
+                                  <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="border border-secondry d-flex flex-column justify-content-center align-items-center py-3 my-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 bg-grt rounded-circle text-white p-2" width="80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
+                                  </svg>
+                                  <h3 class="my-3">Device Mockups</h3>
+                                  <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                            </div>
+                            <div class="border border-secondry d-flex flex-column justify-content-center align-items-center py-3 my-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 bg-grt rounded-circle text-white p-2" width="80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
+                                  </svg>
+                                  <h3 class="my-3">Device Mockups</h3>
+                                  <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- Rounded Image SEction  -->
+        <section class="container my-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="py-3 d-flex flex-column justify-content-center text-center text-sm-start h-100">
+                        <h1 class="text-blue display-4 fw-bold">Enter a new age of web design</h1>
+                        <p class="fs-5 text-muted">This section is perfect for featuring some information about your application, why it was built, the problem it solves, or anything else! There's plenty of space for text here, so don't worry about writing too much.</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="py-5">
+                        <img src="./img/web-design.png" class="rounded-circle w-100" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    </main>
 </body>
 </html>
