--- a/index.html
+++ b/index.html
@@ -125,6 +125,31 @@
                 </div>
             </div>
         </section>
-
+<!-- Stop Writting Section  -->
+        <section class="stop-writting">
+            <div class="container d-flex flex-column justify-content-center align-items-sm-start align-items-center text-center text-sm-start h-100">
+                <h1 class="display-2 text-white w-50">Stop waiting. Start building.</h1>
+                <a href="" class="btn btn-outline-light rounded-pill py-3 px-4">Download for free</a>
+            </div>
+        </section>
+<!-- Download Section  -->
+        <section class="bg-grt py-5" id="download">
+            <div class="py-5">
+                <h1 class="text-center text-white">Get the app now!</h1>
+                <div class="d-flex justify-content-center">
+                    <a href="">
+                        <img src="./img/google-play.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./img/app-store.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </section>
+        <footer class="bg-dark py-3 text-center">
+            <small class="text-white">© Your Website 2021. All Rights Reserved.</small>
+            <script src="./js/bootstrap.bundle.min.js"></script>
+        </footer>
+    </main>
 </body>
 </html>
